<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DpToursandTravels</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
<string name="b1">Login</string>
<string name="b2">SignUp</string>
<string name="t1">Username</string>
<string name="t2">Name</string>
<string name="t3">Email</string>
<string name="t4">Password</string>
<string name="t5">Confirm Password</string>
<string name="b3">Sign Up</string>
<string name="b4">Login</string>


</resources>
