<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hryhf" >

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/editText2"
        android:layout_marginBottom="33dp"
        android:ems="10"
        android:hint="@string/t5"
        android:inputType="textPassword"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText3"
        android:layout_alignLeft="@+id/editText1"
        android:layout_marginBottom="38dp"
        android:ems="10"
        android:hint="@string/t4"
        android:inputType="textPassword"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/EditText01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText1"
        android:layout_alignLeft="@+id/editText1"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:hint="@string/t3"
        android:inputType="text"
        android:textSize="35sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/b3"
        android:textColor="@android:color/black"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:hint="@string/t1"
        android:inputType="text"
        android:textSize="35sp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/EditText02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/EditText01"
        android:layout_alignLeft="@+id/EditText01"
        android:layout_marginBottom="21dp"
        android:ems="10"
        android:hint="@string/t2"
        android:inputType="text"
        android:textSize="35sp" />

</RelativeLayout>
